--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "dagre-d3": "^0.6.4",
     "date-fns": "^2.15.0",
     "emotion-theming": "^10.0.27",
+    "geolib": "^3.3.1",
     "js-graph-algorithms": "^1.0.18",
     "katex": "^0.12.0",
     "leaflet": "^1.7.1",
