--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "d3": "^5",
     "dagre-d3": "^0.6.4",
     "date-fns": "^2.15.0",
+    "dbf": "^0.1.4",
     "emotion-theming": "^10.0.27",
     "geolib": "^3.3.1",
     "js-graph-algorithms": "^1.0.18",
