--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
